<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingActivity"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Black"
        android:padding="10dp">


        <ImageButton
            android:id="@+id/btn_setting_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/White" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="설정"
            android:textColor="@color/White"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Gray"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="회원정보"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/White"
            android:paddingStart="10dp"
            android:paddingVertical="5dp"

            >

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="닉네임"/>


            <EditText
                android:id="@+id/et_setting_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Transparent"
                android:text="asdasd"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="성별"
                />

            <RadioGroup
                android:id="@+id/rg_setting_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rb_setting_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_setting_female"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="나이대" />

            <Spinner
                android:layout_marginTop="5dp"
                android:id="@+id/sp_setting_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/age"
                />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="관심사"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            />

        <GridLayout
            android:id="@+id/gl_setting_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:background="@color/White"
            >

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_setting_selfy"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category0"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_setting_pet"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_setting_fashion"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_setting_shopping"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_setting_etc"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category4"
                android:onClick="onCheckboxClicked"/>
        </GridLayout>



    </LinearLayout>




</LinearLayout>

