<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="회원가입"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/Black"

        />

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="닉네임"
            android:textSize="15sp"
            android:textColor="@color/Black"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/Gray"
            app:cardCornerRadius="10dp"

            >

            <EditText
                android:id="@+id/et_signup_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/Black"
                android:maxLength="10"
                android:textSize="12sp"
                />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_signup_warn_nickname"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_nickname"
            android:textSize="12sp"
            android:textColor="@color/Red"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="성별"
            android:textSize="15sp"
            android:textColor="@color/Black"/>

        <RadioGroup
            android:id="@+id/rg_signup_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="연령대"
            android:textSize="15sp"
            android:textColor="@color/Black"
            />

        <Spinner
            android:id="@+id/sp_signup_age"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/age"/>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="관심사"
            android:textColor="@color/Black"
            android:textSize="15sp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            >

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_signup_selfy"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category0"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_signup_pet"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category1"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_signup_fashion"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category2"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_signup_shopping"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category3"
                android:onClick="onCheckboxClicked"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_signup_etc"
                android:layout_columnWeight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category4"
                android:onClick="onCheckboxClicked"/>
        </GridLayout>

        <TextView
            android:id="@+id/tv_signup_warn_category"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_category"
            android:textSize="12sp"
            android:textColor="@color/Red"/>

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/btn_signup_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_fg"
        android:backgroundTint="@color/colorPrimary"
        android:text="제출"
        android:textColor="@color/White"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>