<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UploadImgActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/btn_upload_addPicture"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@id/tv_upload_save"
            android:background="@drawable/ic_insert_photo_black_24dp" />

        <ImageButton
            android:id="@+id/btn_upload_camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_upload_addPicture"
            android:layout_alignBottom="@id/btn_upload_addPicture"
            android:backgroundTint="@color/Black"
            android:background="@drawable/ic_baseline_camera_alt_24"/>

        <LinearLayout
            android:id="@+id/ll_upload_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/btn_upload_addPicture"
            android:gravity="center"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/tv_upload_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/Black"
                />

            <Spinner
                android:layout_marginStart="5dp"
                android:id="@+id/sp_upload_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
<!--                android:entries="@array/category_post"-->
        </LinearLayout>



        <TextView
            android:id="@+id/tv_upload_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_corner_fg"
            android:backgroundTint="@color/Black"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/White"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/et_upload_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_upload_category"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/Black"
            android:hint="@string/title"
            android:maxLength="25"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_upload_titleCnt"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_upload_title"
            android:layout_alignLeft="@id/et_upload_title"
            android:layout_toRightOf="@id/et_upload_title"
            android:text="(0/0)"
            android:textSize="12sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_upload_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_upload_titleCnt"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardBackgroundColor="#80E8E7E7"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">


            <EditText
                android:id="@+id/et_upload_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/description"
                android:maxLength="77"
                android:textColor="@color/Black"
                android:textSize="15sp" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_upload_contentCnt"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_upload_content"
            android:layout_alignLeft="@id/cv_upload_content"
            android:text="(0/0)"
            android:textSize="12sp"/>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gv_upload_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_upload_contentCnt"
            android:layout_marginTop="15dp"
            android:scrollbars="none"
            />


    </RelativeLayout>


</ScrollView>